# federal-payroll-prediction-antigravity

./: .env.example  PLAN.md  README.md  app.py  main.py  processed_data.parquet  pyproject.toml  raw_usajobs_data.json
checkpoints/: epoch=100-step=8888-v1.ckpt  epoch=100-step=8888.ckpt  epoch=14-step=135.ckpt  epoch=150-step=26727.ckpt  epoch=255-step=2304-v1.ckpt  epoch=255-step=2304.ckpt  epoch=263-step=46728.ckpt  epoch=279-step=2520-v1.ckpt  epoch=279-step=2520.ckpt  epoch=339-step=3060.ckpt  epoch=345-step=3114.ckpt  epoch=347-step=3132-v1.ckpt  epoch=347-step=3132.ckpt  epoch=357-step=3222.ckpt  epoch=4-step=440.ckpt  epoch=49-step=450-v1.ckpt  epoch=49-step=450.ckpt  epoch=50-step=4488.ckpt
scripts/: acquire_data.py  process_data.py
src/: callbacks.py  data.py  model.py  visualization.py
