[project]
name = "federal-payroll-prediction-antigravity"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.2",
    "fastparquet>=2026.3.0",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "pytorch-lightning>=2.6.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
    "torch>=2.10.0",
]
